--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
       <body>
 
-            <h1>Hello World</h1>
+            <h1>Tere maailm</h1>
             <p>I'm hosted with GitHub Pages.</p>
 
       </body>
